.happypack/s--500605705
/Users/tmac_zc/Code/kr-admin/src/Configs/apis.js: Unexpected token (223:0)
SyntaxError: /Users/tmac_zc/Code/kr-admin/src/Configs/apis.js: Unexpected token (223:0)
[0m [90m 221 | [39m    method[33m:[39m [32m'get'[39m
 [90m 222 | [39m  }[33m,[39m
[31m[1m>[22m[39m[90m 223 | [39m[33m<<[39m[33m<<[39m[33m<<[39m[33m<[39m [33mHEAD[39m
 [90m     | [39m[31m[1m^[22m[39m
 [90m 224 | [39m
 [90m 225 | [39m   [90m//è´¢åŠ¡ç®¡ç†ï¼è®¢å•è´¦å•åˆ—è¡¨-åˆ†é¡µèŽ·å–è®¢å•[39m
 [90m 226 | [39m   [32m'getFinaDataByList'[39m[33m:[39m {[0m
    at Parser.pp$5.raise (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp.unexpected (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1627:8)
    at Parser.pp$3.parseIdentifier (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4122:10)
    at Parser.pp$3.parsePropertyName (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3945:103)
    at Parser.<anonymous> (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5358:23)
    at Parser.parsePropertyName (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5507:23)
    at Parser.pp$3.parseObj (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3862:12)
    at Parser.pp$3.parseExprAtom (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3555:19)
    at Parser.parseExprAtom (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6402:22)
    at Parser.pp$3.parseExprSubscripts (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)